sandbox/output
StrategyNormalItem.java:10: error: cannot find symbol
        if (item.quality > 0) {                    
            ^
  symbol:   variable item
  location: class StrategyNormalItem
StrategyNormalItem.java:11: error: cannot find symbol
            item.quality -= 1;
            ^
  symbol:   variable item
  location: class StrategyNormalItem
StrategyNormalItem.java:16: error: cannot find symbol
        item.sellIn -= 1;            
        ^
  symbol:   variable item
  location: class StrategyNormalItem
StrategyNormalItem.java:20: error: cannot find symbol
        if (item.sellIn < 0) {
            ^
  symbol:   variable item
  location: class StrategyNormalItem
StrategyNormalItem.java:22: error: cannot find symbol
            if (item.quality > 0) {  
                ^
  symbol:   variable item
  location: class StrategyNormalItem
StrategyNormalItem.java:23: error: cannot find symbol
                item.quality -= 1;                           
                ^
  symbol:   variable item
  location: class StrategyNormalItem
6 errors
